Prevent activity log BGL readings from being hidden on small displays

--- a/diatrack/ClientApp/src/app/activity-log/activity-log-list/activity-log-list.component.scss
+++ b/diatrack/ClientApp/src/app/activity-log/activity-log-list/activity-log-list.component.scss
@@ -82,7 +82,6 @@
                     flex-direction: column;
                     align-items: flex-end;
                     height: 100%;
-                    overflow-x: hidden;
 
                     .info {
                         display: flex;
